--- a/MsCommun/MsCommun.csproj
+++ b/MsCommun/MsCommun.csproj
@@ -8,7 +8,7 @@
     <Company>FataDev</Company>
     <Description>Package qui rassembles tous les services  commun au microservices de lapplication schoolap </Description>
     <Copyright>Novembre 2022</Copyright>
-    <PackageIcon>R.png</PackageIcon>
+    <PackageIcon>logo.jpg</PackageIcon>
     <PackageOutputPath>D:\Projets\Schoolap\NugetPackages</PackageOutputPath>
     <Title>sapp.util.commun</Title>
     <Product>Sapp</Product>
@@ -16,6 +16,10 @@
     <NeutralLanguage>fr-CA</NeutralLanguage>
     <RepositoryUrl>https://github.com/phoenixSil/mscommun</RepositoryUrl>
     <RepositoryType>https://github.com/phoenixSil/mscommun.git</RepositoryType>
+    <AssemblyVersion>1.0.5</AssemblyVersion>
+    <FileVersion>1.0.5</FileVersion>
+    <Version>1.0.5</Version>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +27,8 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation" Version="11.2.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.10" />
@@ -30,16 +36,16 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.10" />
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Moq" Version="4.18.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Dtos\" />
-    <Folder Include="RabbitMQ\" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="C:\Users\tsill\Desktop\R.png">
+    <None Include="C:\Users\tsill\Desktop\logo.jpg">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
